log/build_2024-05-30_14-04-38/doozy_forklift/stderr.log
  File "/home/avinaash/ForkLift_AMR/install/doozy_forklift/lib/python3.8/site-packages/doozy_forklift/dock_with_pallet_11.py", line 197
    if
      ^
SyntaxError: invalid syntax

